--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,8 @@ tags:
 presentation_date: 2018/01/28
 version: 2018.01.28
 licenses: []
-slideshare_id: 
-speaker_deck_id: 
+slideshare_id: boot2docker-formatme
+speaker_deck_id: boot2docker-false-format-me-falsehua
 ustream_id: 
 vimeo_id: 
 youtube_id: 
